media queries on email address display to prevent longer email addresses from breaking layout on small screen

--- a/app/styles/modules/_locations.scss
+++ b/app/styles/modules/_locations.scss
@@ -16,11 +16,17 @@
     .appTitle {
       width: 50%;
       display: inline-block;
+      // @media screen and(min-width: 425px){
+      //   width: 30%;
+      // }
       h1 {
         width: 20%;
       }
       .demoMode {
         @include grayButton;
+        @media screen and(min-width: 375px){
+          font-size: 1.2rem;
+        }
       }
     }
     .userInfo {
@@ -32,6 +38,7 @@
         .logout {
           @include grayButton;
         }
+
       }
     }
   }
@@ -291,5 +298,22 @@
     @media screen and (min-width: 1024px) {
       display: none;
     }
+  }
+}
+#userEmail{
+  overflow-x: scroll;
+  max-width: 100px;
+  @media screen and(min-width: 375px){
+    max-width: 160px;
+  }
+  @media screen and(min-width: 425px){
+    max-width: 180px;
+  }
+  @media screen and(min-width: 500px){
+    max-width: 220px;
+  }
+
+  @media screen and (min-width: 768px){
+    max-width: 300px;
   }
 }
